@@ -7,6 +7,7 @@ WORKDIR /app
 
 COPY web .
 
+RUN yarn config set registry https://registry.npmmirror.com/ --global
 RUN yarn && yarn build
 
 FROM maven:3.8.7-amazoncorretto-17 AS build
@@ -15,38 +16,16 @@ WORKDIR /app
 
 COPY src src
 COPY pom.xml pom.xml
+COPY settings.xml /usr/share/maven/conf/settings.xml
 COPY LICENSE LICENSE
 COPY --from=front-build /app/dist src/main/resources/static
 
 RUN mvn -f pom.xml clean package -Dmaven.test.skip=true
 
-
-# base image to build a JRE
-FROM amazoncorretto:17.0.6-alpine as corretto-jdk
-
-# required for strip-debug to work
-RUN apk add --no-cache binutils
-
-# Build small JRE image
-RUN $JAVA_HOME/bin/jlink \
-         --verbose \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /customjre
-
 #
 # Package stage
 #
-FROM alpine:latest
-
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-
-# copy JRE from the base image
-COPY --from=corretto-jdk /customjre $JAVA_HOME
+FROM amazoncorretto:17-alpine
 
 ENV SERVER_PORT 8080
 ENV DEFAULT_USERNAME admin
@@ -59,4 +38,4 @@ COPY --from=build /app/LICENSE LICENSE
 
 EXPOSE $SERVER_PORT
 
-ENTRYPOINT ["/jre/bin/java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/usr/local/kafka-map/kafka-map.jar", "--server.port=${SERVER_PORT}", "--default.username=${DEFAULT_USERNAME}", "--default.password=${DEFAULT_PASSWORD}"]
+ENTRYPOINT ["/usr/bin/java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/usr/local/kafka-map/kafka-map.jar", "--server.port=${SERVER_PORT}", "--default.username=${DEFAULT_USERNAME}", "--default.password=${DEFAULT_PASSWORD}"]
